--- a/crawler/data-analysis.ipynb
+++ b/crawler/data-analysis.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Analysis - check correctness of the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,6 +305,161 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Books                  33445\n",
+       "Music                  18046\n",
+       "Kids' Books             2990\n",
+       "Textbooks               1710\n",
+       "Teen Books               871\n",
+       "NOOK Books               330\n",
+       "category                  33\n",
+       "Movies & TV               33\n",
+       "Newsstand                 30\n",
+       "Gift, Home & Office       13\n",
+       "Toys                       9\n",
+       "128145                     4\n",
+       "129658                     2\n",
+       "123419                     2\n",
+       "NOOK                       2\n",
+       "11361                      1\n",
+       "Name: category, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['category'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18  Years               2432\n",
+       "8 - 12 Years             418\n",
+       "4 - 8 Years              310\n",
+       "13 - 17 Years            210\n",
+       "12  Years                188\n",
+       "9 - 12 Years             175\n",
+       "13 - 18 Years            161\n",
+       "12 - 17 Years            159\n",
+       "14 - 17 Years            131\n",
+       "7 - 10 Years             128\n",
+       "3 - 5 Years              128\n",
+       "5 - 8 Years              128\n",
+       "16  Years                118\n",
+       "13  Years                111\n",
+       "3 - 7 Years               97\n",
+       "6 - 8 Years               94\n",
+       "4 - 7 Years               90\n",
+       "2 - 5 Years               82\n",
+       "16 - 18 Years             79\n",
+       "14 - 18 Years             77\n",
+       "6 - 9 Years               73\n",
+       "10 - 14 Years             72\n",
+       "5 - 11 Years              62\n",
+       "3 Months to 18 Years      62\n",
+       "3 Months to 3 Years       53\n",
+       "8 - 11 Years              49\n",
+       "3 - 6 Years               48\n",
+       "5 - 7 Years               48\n",
+       "12 - 18 Years             45\n",
+       "4 - 6 Years               43\n",
+       "                        ... \n",
+       "2 - 8 Years                1\n",
+       "14 - 16 Years              1\n",
+       "6 - 16 Years               1\n",
+       "8 - 16 Years               1\n",
+       "16 - 12 Years              1\n",
+       "3 - 11 Years               1\n",
+       "2 - 7 Years                1\n",
+       "4 - 13 Years               1\n",
+       "21 Months to 3 Years       1\n",
+       "3 - 17 Years               1\n",
+       "14 - 10 Years              1\n",
+       "1 - 6 Years                1\n",
+       "9 - 16 Years               1\n",
+       "1 - 8 Years                1\n",
+       "1 - 10 Years               1\n",
+       "2 - 12 Years               1\n",
+       "12 - 10 Years              1\n",
+       "Up to 4  Years             1\n",
+       "9 - 15 Years               1\n",
+       "6 - 18 Months              1\n",
+       "Up to 6  Years             1\n",
+       "3 Months                   1\n",
+       "16 - 10 Years              1\n",
+       "4 - 14 Years               1\n",
+       "Up to 2  Years             1\n",
+       "3 Months to 6 Years        1\n",
+       "17 - 18 Years              1\n",
+       "18 - 13 Years              1\n",
+       "2 - 18 Years               1\n",
+       "9 - 8 Years                1\n",
+       "Name: age_range, Length: 169, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['age_range'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "original_release    33\n",
+       "0000                13\n",
+       "1998                 2\n",
+       "2008                 1\n",
+       "1938                 1\n",
+       "2003                 1\n",
+       "1986                 1\n",
+       "2005                 1\n",
+       "1994                 1\n",
+       "2007                 1\n",
+       "2012                 1\n",
+       "2015                 1\n",
+       "2010                 1\n",
+       "1954                 1\n",
+       "2013                 1\n",
+       "2006                 1\n",
+       "2000                 1\n",
+       "2011                 1\n",
+       "Name: original_release, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['original_release'].value_counts()"
    ]
   }
  ],
