--- a/crawler/data-analysis.ipynb
+++ b/crawler/data-analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,8 +308,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## category"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +341,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +352,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Music', 'Books', 'Teen Books', 'Textbooks', \"Kids' Books\",\n",
+       "       'category', 'Newsstand', 'NOOK Books', 'Gift, Home & Office',\n",
+       "       'Toys', '128145', '129658', 'Movies & TV', '123419', '11361',\n",
+       "       'NOOK'], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['category'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## age_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -361,8 +398,8 @@
        "12 - 17 Years            159\n",
        "14 - 17 Years            131\n",
        "7 - 10 Years             128\n",
-       "3 - 5 Years              128\n",
        "5 - 8 Years              128\n",
+       "3 - 5 Years              128\n",
        "16  Years                118\n",
        "13  Years                111\n",
        "3 - 7 Years               97\n",
@@ -377,45 +414,45 @@
        "3 Months to 18 Years      62\n",
        "3 Months to 3 Years       53\n",
        "8 - 11 Years              49\n",
-       "3 - 6 Years               48\n",
        "5 - 7 Years               48\n",
+       "3 - 6 Years               48\n",
        "12 - 18 Years             45\n",
        "4 - 6 Years               43\n",
        "                        ... \n",
-       "2 - 8 Years                1\n",
-       "14 - 16 Years              1\n",
-       "6 - 16 Years               1\n",
-       "8 - 16 Years               1\n",
-       "16 - 12 Years              1\n",
-       "3 - 11 Years               1\n",
-       "2 - 7 Years                1\n",
-       "4 - 13 Years               1\n",
-       "21 Months to 3 Years       1\n",
-       "3 - 17 Years               1\n",
-       "14 - 10 Years              1\n",
-       "1 - 6 Years                1\n",
-       "9 - 16 Years               1\n",
-       "1 - 8 Years                1\n",
-       "1 - 10 Years               1\n",
-       "2 - 12 Years               1\n",
-       "12 - 10 Years              1\n",
-       "Up to 4  Years             1\n",
        "9 - 15 Years               1\n",
-       "6 - 18 Months              1\n",
-       "Up to 6  Years             1\n",
-       "3 Months                   1\n",
+       "6 - 13 Years               1\n",
+       "14 - 10 Years              1\n",
        "16 - 10 Years              1\n",
-       "4 - 14 Years               1\n",
-       "Up to 2  Years             1\n",
-       "3 Months to 6 Years        1\n",
        "17 - 18 Years              1\n",
-       "18 - 13 Years              1\n",
+       "16 - 12 Years              1\n",
+       "6 - 16 Years               1\n",
+       "3 Months                   1\n",
+       "21 Months to 3 Years       1\n",
+       "9 - 16 Years               1\n",
+       "3 Months to 6 Years        1\n",
        "2 - 18 Years               1\n",
+       "4 - 3 Years                1\n",
+       "2 - 12 Years               1\n",
+       "4 - 14 Years               1\n",
+       "3 - 11 Years               1\n",
+       "Up to 5  Years             1\n",
+       "8 - 16 Years               1\n",
+       "6 - 18 Months              1\n",
+       "3 - 17 Years               1\n",
+       "2 - 7 Years                1\n",
+       "1 - 8 Years                1\n",
        "9 - 8 Years                1\n",
+       "Up to 4  Years             1\n",
+       "3 Months to 1 Years        1\n",
+       "Up to 2  Years             1\n",
+       "4 - 13 Years               1\n",
+       "9 - 17 Years               1\n",
+       "12 - 10 Years              1\n",
+       "18 - 13 Years              1\n",
        "Name: age_range, Length: 169, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
