--- a/crawler/data-analysis.ipynb
+++ b/crawler/data-analysis.ipynb
@@ -354,25 +354,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Music', 'Books', 'Teen Books', 'Textbooks', \"Kids' Books\",\n",
-       "       'category', 'Newsstand', 'NOOK Books', 'Gift, Home & Office',\n",
-       "       'Toys', '128145', '129658', 'Movies & TV', '123419', '11361',\n",
-       "       'NOOK'], dtype=object)"
+       "array(['5.18(w) x 8.16(h) x 0.78(d)', '8.54(w) x 11.80(h) x 0.48(d)', nan,\n",
+       "       ..., '8.60(w) x 10.90(h) x 1.30(d)',\n",
+       "       '8.50(w) x 10.88(h) x 0.80(d)', '9.64(w) x 11.52(h) x 2.09(d)'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['category'].unique()"
+    "df['product_dimensions'].unique()"
    ]
   },
   {
@@ -384,83 +384,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18  Years               2432\n",
-       "8 - 12 Years             418\n",
-       "4 - 8 Years              310\n",
-       "13 - 17 Years            210\n",
-       "12  Years                188\n",
-       "9 - 12 Years             175\n",
-       "13 - 18 Years            161\n",
-       "12 - 17 Years            159\n",
-       "14 - 17 Years            131\n",
-       "7 - 10 Years             128\n",
-       "5 - 8 Years              128\n",
-       "3 - 5 Years              128\n",
-       "16  Years                118\n",
-       "13  Years                111\n",
-       "3 - 7 Years               97\n",
-       "6 - 8 Years               94\n",
-       "4 - 7 Years               90\n",
-       "2 - 5 Years               82\n",
-       "16 - 18 Years             79\n",
-       "14 - 18 Years             77\n",
-       "6 - 9 Years               73\n",
-       "10 - 14 Years             72\n",
-       "5 - 11 Years              62\n",
-       "3 Months to 18 Years      62\n",
-       "3 Months to 3 Years       53\n",
-       "8 - 11 Years              49\n",
-       "5 - 7 Years               48\n",
-       "3 - 6 Years               48\n",
-       "12 - 18 Years             45\n",
-       "4 - 6 Years               43\n",
-       "                        ... \n",
-       "9 - 15 Years               1\n",
-       "6 - 13 Years               1\n",
-       "14 - 10 Years              1\n",
-       "16 - 10 Years              1\n",
-       "17 - 18 Years              1\n",
-       "16 - 12 Years              1\n",
-       "6 - 16 Years               1\n",
-       "3 Months                   1\n",
-       "21 Months to 3 Years       1\n",
-       "9 - 16 Years               1\n",
-       "3 Months to 6 Years        1\n",
-       "2 - 18 Years               1\n",
-       "4 - 3 Years                1\n",
-       "2 - 12 Years               1\n",
-       "4 - 14 Years               1\n",
-       "3 - 11 Years               1\n",
-       "Up to 5  Years             1\n",
-       "8 - 16 Years               1\n",
-       "6 - 18 Months              1\n",
-       "3 - 17 Years               1\n",
-       "2 - 7 Years                1\n",
-       "1 - 8 Years                1\n",
-       "9 - 8 Years                1\n",
-       "Up to 4  Years             1\n",
-       "3 Months to 1 Years        1\n",
-       "Up to 2  Years             1\n",
-       "4 - 13 Years               1\n",
-       "9 - 17 Years               1\n",
-       "12 - 10 Years              1\n",
-       "18 - 13 Years              1\n",
-       "Name: age_range, Length: 169, dtype: int64"
+       "Beginners Guide                                                                   102\n",
+       "L.E.G.I.O.N. (1989-)                                                               67\n",
+       "ePeriodical Series                                                                 56\n",
+       "Kelly's Quickies                                                                   44\n",
+       "The MIT Press                                                                      43\n",
+       "Images of America Series                                                           42\n",
+       "For Dummies Series                                                                 42\n",
+       "volumen independiente\\n, #2                                                        37\n",
+       "JPS Study Bible Series                                                             36\n",
+       "Halcyon Classics\\n, #1                                                             36\n",
+       "Justice League of America (1960-)                                                  35\n",
+       "Routledge Revivals                                                                 29\n",
+       "SparkNotes Literature Guide Series                                                 27\n",
+       "Unforgotten Classics\\n, #1                                                         25\n",
+       "Tin Universe                                                                       24\n",
+       "Dover Little Activity Books Stickers Series                                        22\n",
+       "Candace Quickies                                                                   22\n",
+       "Hawkman (1964-)                                                                    20\n",
+       "Barnes & Noble Digital Library                                                     20\n",
+       "Bite Sized Arla                                                                    19\n",
+       "Wonder Woman (1942-)                                                               19\n",
+       "Littérature Française                                                              19\n",
+       "Oxford Handbooks Series                                                            18\n",
+       "EPUBS                                                                              18\n",
+       "Nightwing (1996-2009)                                                              17\n",
+       "Detective Comics (1937-2011)                                                       17\n",
+       "Grow a Thousand Stories Tall Series                                                16\n",
+       "JPS Study Bible                                                                    16\n",
+       "Dover Books on Mathematics Series                                                  15\n",
+       "P.S. Series                                                                        15\n",
+       "                                                                                 ... \n",
+       "Alcoholism Treatment Quarterly Series                                               1\n",
+       "Beany Malone Series                                                                 1\n",
+       "Ding Dong Belles\\n, #1                                                              1\n",
+       "Shopkins Series\\n, #16                                                              1\n",
+       "Wir wollen ins Finale!\\n, #1                                                        1\n",
+       "Darwin ve Turlerin Kokeni: [Bir Biyografik & Darwin ve Evrim Kurami Calismasi]      1\n",
+       "Lecture Notes in Mathematics\\n, #1283                                               1\n",
+       "Bone (Comics) Series                                                                1\n",
+       "Adventures of George and Reggie\\n, #2                                               1\n",
+       "Oxford Paperback Reference                                                          1\n",
+       "Quellen und Studien zur Philosophie Series                                          1\n",
+       "Wiley Trading Audio Series\\n, #40                                                   1\n",
+       "British Society for the Philosophy of Religion Series                               1\n",
+       "The Scottish Lairds Series\\n, #1                                                    1\n",
+       "Nympho Housewives\\n, #2                                                             1\n",
+       "Guide Education\\n, #3                                                               1\n",
+       "Studies of Government Finance                                                       1\n",
+       "Carnival of Souls\\n, #3                                                             1\n",
+       "Kogan Page Series                                                                   1\n",
+       "Want to Know Series                                                                 1\n",
+       "Junior Lifeguards Series\\n, #5                                                      1\n",
+       "Rough Guide Phrasebooks Series                                                      1\n",
+       "Eighteenth-Century Novels by Women Series                                           1\n",
+       "Highlights(TM) Who's There? Knock-Knock Door Hanger Joke Books Series               1\n",
+       "Nonfiction Collection                                                               1\n",
+       "Kreme Klassic\\n, #41                                                                1\n",
+       "Studies in Communication                                                            1\n",
+       "Temperance Falls\\n, #1                                                              1\n",
+       "Good Vibes 2018\\n, #1                                                               1\n",
+       "7 Hours                                                                             1\n",
+       "Name: series, Length: 22633, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['age_range'].value_counts()"
+    "df['series'].value_counts()"
    ]
   },
   {
